@@ -123,7 +123,7 @@
 #  else
 #    ifdef HAVE_FTIME
 #      include <sys/timeb.h>
-struct timeb timebegin;
+extern struct timeb timebegin;
 #    endif
 #  endif
 #endif
